[tool.poetry]
name = "python3-priism"
version = "0.1.0"
description = "Python 3 environment for tnakazato/priism"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.6"
casadata = "^2021.10.11"
casatools = "^6.4"
casatasks = "^6.4"

[tool.poetry.dev-dependencies]
ipython = "^7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
